refactor: replace .toList() with .collect(Collectors.toList()) for compatibility across service implementations